--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1311,7 +1311,12 @@ page = 13
       onboard_log_tr4_thr_off   = scalar,   U08,  122,        "V",        0.1,   0.0,  0.0,  14.90,      2 ; * (  1 byte)   
       onboard_log_tr5_thr_on    = scalar,   U08,  123,        "pin",      1.0,   0.0,  0.0,    255,        0 ;  
 
-      unused12_125_127          = array,    U08,  124,  [4],  "%",       1.0,     0.0,   0.0,      255,      0
+      pedalPositionEnabled      = bits,     U08,  124, [0:0], "Off", "On"
+      pedalPositionPin          = bits,     U08,  124, [1:5], "A0", "A1", "A2", "A3", "A4", "A5", "A6", "A7", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "A16", "A17", "A18", "A19", "A20", "A21", "A22", INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID
+      pedalPositionMin          = scalar,   U08,  125,        " ",       1.0,       0.0,   0.0,     255,    0
+      pedalPositionMax          = scalar,   U08,  126,        " ",       1.0,       0.0,   0.0,     255,    0
+
+      unused12_127_127          = array,    U08,  127,  [1],  "%",       1.0,     0.0,   0.0,      255,      0
 
 ;--------------------------------------------------
 ;Second ignition map (Page 14)
@@ -1748,7 +1753,6 @@ menuDialog = main
         subMenu = wmiTbl,               "WMI duty cycle", 8,  { !vvtEnabled && wmiEnabled && wmiMode > 1 }  
         subMenu = std_separator
         subMenu = tacho,                "Tacho Output"
-
         subMenu = std_separator
 
     #if CAN_COMMANDS
@@ -1765,6 +1769,9 @@ menuDialog = main
         subMenu = Auxin_config,         "Local Auxillary Input Channel Configuration"
     #endif
         subMenu = pressureSensors,      "Fuel/Oil pressure"
+
+        subMenu = std_separator
+        subMenu = pedal,                "Pedal Sensor"
 
   menuDialog = main
    menu = "Tools"
@@ -2345,6 +2352,15 @@ menuDialog = main
         field = "Pulse duration",       tachoDuration
         ;field = "Tacho sweep on boot",  useTachoSweep
         ;field = "Tacho sweep Max RPM",  tachoSweepMaxRPM, { useTachoSweep }
+
+    dialog = pedal, "Pedal Settings"
+        field = "Enabled", pedalPositionEnabled
+        field = "Pedal Pin", pedalPositionPin, { pedalPositionEnabled }
+        commandButton = "Get Current", cmdGetMinPps, { pedalPositionEnabled }
+        field = "Pedal Position Minimum", pedalPositionMin, { pedalPositionEnabled }
+        commandButton = "Get Current", cmdGetMaxPps, { pedalPositionEnabled }
+        field = "Pedal Position Maximum",  pedalPositionMax, { pedalPositionEnabled }
+        gauge = pedalPositionGauge, { pedalPositionEnabled }
 
     dialog = accelEnrichments_aeSettings, ""
         field = "Enrichment mode",      aeMode
@@ -4661,6 +4677,7 @@ cmdVSSratio6 =      "E\x99\x06"
     mapMultiplyGauge  = map_multiply_amt, "MAP Multiply",     "%",       0,   200,    130,   140,  140,  150, 0, 0
     nSquirtsGauge     = nSquirts,       "# Squirts",          "",        0,    10,    130,   140,  140,  150, 0, 0
     syncLossGauge     = syncLossCounter, "# Sync Losses",      "",        0,    255,    -1,   -1,  10,  50, 0, 0
+    pedalPositionGauge = pedalPosition,   "Pedal Position",        "%",          17,    115,    0,      20,  200,  245, 0, 0
 ;-------------------------------------------------------------------------------
 
 [FrontPage]
@@ -4673,7 +4690,7 @@ cmdVSSratio6 =      "E\x99\x06"
 
    gauge1 = tachometer
    gauge2 = throttleGauge
-   gauge3 = pulseWidthGauge
+   gauge3 = pedalPositionGauge
    gauge4 = dutyCycleGauge
    gauge5 = mapGauge
    gauge6 = iatGauge
@@ -4738,7 +4755,8 @@ cmdVSSratio6 =      "E\x99\x06"
    ; you change it.
 
    ochGetCommand    = "r\$tsCanId\x30%2o%2c"
-   ochBlockSize     =  121
+   ochBlockSize     =  122
+   ;ochBlockSize     =  121
 
    secl             = scalar, U08,  0, "sec",    1.000, 0.000
    status1          = scalar, U08,  1, "bits",   1.000, 0.000
@@ -4882,6 +4900,7 @@ cmdVSSratio6 =      "E\x99\x06"
    ;sd_filenum       = scalar,   U16,    117, "", 1, 0
    ;sd_error         = scalar,   U08,    119, "", 1, 0
    ;sd_phase         = scalar,   U08,    120, "", 1, 0
+   pedalPosition     = scalar,   U08,    121, "%",   1.000, 0.000
 
 #if CELSIUS
    coolant          = { coolantRaw - 40                               } ; Temperature readings are offset by 40 to allow for negatives
