--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -4101,6 +4101,8 @@ cmdVSSratio4 =      "E\x99\x04"
 cmdVSSratio5 =      "E\x99\x05"
 cmdVSSratio6 =      "E\x99\x06"
 
+cmdGetMinPps = 
+
 [CurveEditor]
 
 ;tps-based accel enrichment
@@ -4677,7 +4679,8 @@ cmdVSSratio6 =      "E\x99\x06"
     mapMultiplyGauge  = map_multiply_amt, "MAP Multiply",     "%",       0,   200,    130,   140,  140,  150, 0, 0
     nSquirtsGauge     = nSquirts,       "# Squirts",          "",        0,    10,    130,   140,  140,  150, 0, 0
     syncLossGauge     = syncLossCounter, "# Sync Losses",      "",        0,    255,    -1,   -1,  10,  50, 0, 0
-    pedalPositionGauge = pedalPosition,   "Pedal Position",        "%",          17,    115,    0,      20,  200,  245, 0, 0
+    pedalPositionGauge = pedalPosition,   "Pedal Position",        "%PPS",          0,    100,    0,      0,  105,  115, 0, 0
+    ppsADCGauge       = ppsADC,        "PPS ADC",            "",        0,   255,     -1,    -1,  256,  256, 0, 0
 ;-------------------------------------------------------------------------------
 
 [FrontPage]
@@ -4755,7 +4758,7 @@ cmdVSSratio6 =      "E\x99\x06"
    ; you change it.
 
    ochGetCommand    = "r\$tsCanId\x30%2o%2c"
-   ochBlockSize     =  122
+   ochBlockSize     =  123
    ;ochBlockSize     =  121
 
    secl             = scalar, U08,  0, "sec",    1.000, 0.000
@@ -4901,6 +4904,7 @@ cmdVSSratio6 =      "E\x99\x06"
    ;sd_error         = scalar,   U08,    119, "", 1, 0
    ;sd_phase         = scalar,   U08,    120, "", 1, 0
    pedalPosition     = scalar,   U08,    121, "%",   1.000, 0.000
+   ppsADC           = scalar,   U08,    122, "ADC",    1.000, 0.000
 
 #if CELSIUS
    coolant          = { coolantRaw - 40                               } ; Temperature readings are offset by 40 to allow for negatives
