--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1313,10 +1313,11 @@ page = 13
 
       pedalPositionEnabled      = bits,     U08,  124, [0:0], "Off", "On"
       pedalPositionPin          = bits,     U08,  124, [1:5], "A0", "A1", "A2", "A3", "A4", "A5", "A6", "A7", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "A16", "A17", "A18", "A19", "A20", "A21", "A22", INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID
+      tbAutoCalEnabled          = bits,     U08,  124, [6:6], "Off", "On"
       pedalPositionMin          = scalar,   U08,  125,        " ",       1.0,       0.0,   0.0,     255,    0
       pedalPositionMax          = scalar,   U08,  126,        " ",       1.0,       0.0,   0.0,     255,    0
-
-      unused12_127_127          = array,    U08,  127,  [1],  "%",       1.0,     0.0,   0.0,      255,      0
+      tbMotPwmPin               = bits,     U08,  127, [0:4], "A0", "A1", "A2", "A3", "A4", "A5", "A6", "A7", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "A16", "A17", "A18", "A19", "A20", "A21", "A22", INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID
+      ;unused12_127_127          = array,    U08,  127,  [5:7],  "%",       1.0,     0.0,   0.0,      255,      0
 
 ;--------------------------------------------------
 ;Second ignition map (Page 14)
@@ -2356,10 +2357,12 @@ menuDialog = main
     dialog = pedal, "Pedal Settings"
         field = "Enabled", pedalPositionEnabled
         field = "Pedal Pin", pedalPositionPin, { pedalPositionEnabled }
-        commandButton = "Get Current", cmdGetMinPps, { pedalPositionEnabled }
+        ;commandButton = "Get Current", cmdGetMinPps, { pedalPositionEnabled }
         field = "Pedal Position Minimum", pedalPositionMin, { pedalPositionEnabled }
-        commandButton = "Get Current", cmdGetMaxPps, { pedalPositionEnabled }
+        ;commandButton = "Get Current", cmdGetMaxPps, { pedalPositionEnabled }
         field = "Pedal Position Maximum",  pedalPositionMax, { pedalPositionEnabled }
+        field = "Throttle Body Pin", tbMotPwmPin, { pedalPositionEnabled }
+        field = "Throttle Body Autocalibration", tbAutoCalEnabled { pedalPositionEnabled }
         gauge = pedalPositionGauge, { pedalPositionEnabled }
 
     dialog = accelEnrichments_aeSettings, ""
@@ -4691,10 +4694,10 @@ cmdGetMinPps =
    ;    1  2  3  4
    ;    5  6  7  8
 
-   gauge1 = tachometer
+   gauge1 = tpsADCGauge
    gauge2 = throttleGauge
    gauge3 = pedalPositionGauge
-   gauge4 = dutyCycleGauge
+   gauge4 = ppsADCGauge
    gauge5 = mapGauge
    gauge6 = iatGauge
    gauge7 = cltGauge
