--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1313,7 +1313,7 @@ page = 13
 
       pedalPositionEnabled      = bits,     U08,  124, [0:0], "Off", "On"
       pedalPositionPin          = bits,     U08,  124, [1:5], "A0", "A1", "A2", "A3", "A4", "A5", "A6", "A7", "A8", "A9", "A10", "A11", "A12", "A13", "A14", "A15", "A16", "A17", "A18", "A19", "A20", "A21", "A22", INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID, INVALID
-      tbAutoCalEnabled          = bits,     U08,  124, [6:6], "Off", "On"
+      ;tbAutoCalEnabled          = bits,     U08,  124, [6:6], "Off", "On"
       pedalPositionMin          = scalar,   U08,  125,        " ",       1.0,       0.0,   0.0,     255,    0
       pedalPositionMax          = scalar,   U08,  126,        " ",       1.0,       0.0,   0.0,     255,    0
       tbMotPwmPin               = bits,     U08,  127, [0:5], "Board Default", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID"
@@ -2354,16 +2354,35 @@ menuDialog = main
         ;field = "Tacho sweep on boot",  useTachoSweep
         ;field = "Tacho sweep Max RPM",  tachoSweepMaxRPM, { useTachoSweep }
 
-    dialog = pedal, "Pedal Settings"
-        field = "Enabled", pedalPositionEnabled
-        field = "Pedal Pin", pedalPositionPin, { pedalPositionEnabled }
-        ;commandButton = "Get Current", cmdGetMinPps, { pedalPositionEnabled }
-        field = "Pedal Position Minimum", pedalPositionMin, { pedalPositionEnabled }
-        ;commandButton = "Get Current", cmdGetMaxPps, { pedalPositionEnabled }
-        field = "Pedal Position Maximum",  pedalPositionMax, { pedalPositionEnabled }
-        field = "Throttle Body Pin", tbMotPwmPin, { pedalPositionEnabled }
-        field = "Throttle Body Autocalibration", tbAutoCalEnabled { pedalPositionEnabled }
-        gauge = pedalPositionGauge, { pedalPositionEnabled }
+    dialog = pedalSettings, "Pedal Settings", yAxis
+        field =         "Enabled",                pedalPositionEnabled
+        field =         "Pedal Pin",              pedalPositionPin, { pedalPositionEnabled }
+
+
+    dialog = pedalCalibration, "Pedal Calibration", yAxis
+        field =         "Pedal Position Minimum", pedalPositionMin, { pedalPositionEnabled }
+        commandButton = "Get Current",            cmdGetMinPps,     { pedalPositionEnabled }, clickOnCloseIfDisabled   
+        field =         "Pedal Position Maximum", pedalPositionMax, { pedalPositionEnabled }
+        commandButton = "Get Current",            cmdGetMaxPps,     { pedalPositionEnabled }, clickOnCloseIfDisabled
+
+    dialog = throttleValues, "Throttle Settings", xAxis
+        field =         "Throttle Body PWM Pin",   tbMotPwmPin, { pedalPositionEnabled }
+        commandButton = "Run Calibration",         cmdTbCal,    { pedalPositionEnabled }, clickOnCloseIfDisabled
+        
+    dialog = pedalSensor, "Pedal Sensor", border
+        panel = pedalSettings, North
+        panel = pedalCalibration, Center
+        panel = throttleValues, South
+
+        
+    dialog = pedalGauges, "Reference Gauges", yAxis
+        gauge = pedalPositionGauge, North, { pedalPositionEnabled }
+        gauge = throttleGauge,      South, { pedalPositionEnabled }
+
+    dialog = pedal, "",xAxis
+        panel = pedalSensor
+        panel = pedalGauges
+        
 
     dialog = accelEnrichments_aeSettings, ""
         field = "Enrichment mode",      aeMode
@@ -4104,8 +4123,11 @@ cmdVSSratio4 =      "E\x99\x04"
 cmdVSSratio5 =      "E\x99\x05"
 cmdVSSratio6 =      "E\x99\x06"
 
-cmdGetMinPps = 
+cmdTbCal =          "E\xC3\x50"
+cmdGetMinPps =      "E\xC3\x51"
+cmdGetMaxPps =      "E\xC3\x52"
 
+;Command = decimal to hexadecimal. ex: 39168 = 9900 in hexadecimal so you write the command = E\x99\x00
 [CurveEditor]
 
 ;tps-based accel enrichment
