--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -1316,7 +1316,7 @@ page = 13
       ;tbAutoCalEnabled          = bits,     U08,  124, [6:6], "Off", "On"
       pedalPositionMin          = scalar,   U08,  125,        " ",       1.0,       0.0,   0.0,     255,    0
       pedalPositionMax          = scalar,   U08,  126,        " ",       1.0,       0.0,   0.0,     255,    0
-      tbMotPwmPin               = bits,     U08,  127, [0:5], "Board Default", "INVALID", "INVALID", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID"
+      tbMotPwmPin               = bits,     U08,  127, [0:5], "Board Default", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34", "35", "36", "37", "38", "39", "40", "41", "42", "43", "44", "45", "46", "47", "48", "49", "50", "51", "52", "53", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID", "INVALID"
       ;unused12_127_127          = array,    U08,  127,  [5:7],  "%",       1.0,     0.0,   0.0,      255,      0
 
 ;--------------------------------------------------
